(executable
  (name Scheduler)
  (modules Project Scheduler FrontpointUnofficialAPI StorageManager)
  (preprocess (pps lwt_ppx))
  (public_name Scheduler)
  (libraries
    str
    console.lib
    cohttp
    lwt
    cohttp-lwt-unix
    yojson
    caqti
    caqti-lwt
    caqti-driver-sqlite3
    fpath
    calendar
  ))
