(executable
  (name Scheduler)
  (modules Project Scheduler UnofficialFrontpointAPI StorageManager)
  (preprocess (pps lwt_ppx))
  (public_name Scheduler)
  (libraries
    str
    cohttp
    lwt
    cohttp-lwt-unix
    yojson
    caqti
    caqti-lwt
    caqti-driver-sqlite3
    fpath
    calendar
  ))
