(executable
  (name Scheduler)
  (modules Project Scheduler UnofficialFrontpointAPI StorageManager)
  (preprocess (pps lwt_ppx))
  (public_name Scheduler)
  (libraries
    str
    tls
    cohttp
    lwt
    lwt_ssl
    cohttp-lwt-unix
    yojson
    caqti
    caqti-lwt
    caqti-driver-sqlite3
    fpath
    calendar
  ))
